--- a/src/POMABlockchain.Modules.Core/POMABlockchain.Modules.Core.csproj
+++ b/src/POMABlockchain.Modules.Core/POMABlockchain.Modules.Core.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Company>POMA</Company>
+    <Authors>Marcos Lobo</Authors>
+    <PackageId>POMABlockchainModules.Core</PackageId>
     
   </PropertyGroup>
 
