--- a/src/POMABlockchain.Modules.KeyPairs/POMABlockchain.Modules.KeyPairs.csproj
+++ b/src/POMABlockchain.Modules.KeyPairs/POMABlockchain.Modules.KeyPairs.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReleaseNotes>ToAddress method</PackageReleaseNotes>
+    <Authors>Marcos Lobo</Authors>
+    <Company>POMA</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
