--- a/src/POMABlockchain.Modules.NVM/POMABlockchain.Modules.NVM.csproj
+++ b/src/POMABlockchain.Modules.NVM/POMABlockchain.Modules.NVM.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>    
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Marcos Lobo</Authors>
+    <Company>POMA</Company>    
   </PropertyGroup>
 
   <ItemGroup>
