--- a/src/POMABlockchain.Modules.NEP6/POMABlockchain.Modules.NEP6.csproj
+++ b/src/POMABlockchain.Modules.NEP6/POMABlockchain.Modules.NEP6.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Marcos Lobo</Authors>
+    <Company>POMA</Company>
     
   </PropertyGroup>
 
