--- a/src/POMABlockchain.Modules.RPC/POMABlockchain.Modules.RPC.csproj
+++ b/src/POMABlockchain.Modules.RPC/POMABlockchain.Modules.RPC.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Marcos Lobo</Authors>
+    <Company>POMA</Company>
     
   </PropertyGroup>
 
